VXIPNP/WinNT/HP663X2/hp663x2.h


#define	HP663X2_RI_OFF				0
#define	HP663X2_RI_LATCHING			1
#define	HP663X2_RI_LIVE				2

#define	HP663X2_DFI_SRC_PREV		0
#define	HP663X2_DFI_SRC_QUES		1
#define	HP663X2_DFI_SRC_OPER		2
#define	HP663X2_DFI_SRC_ESB			3
#define	HP663X2_DFI_SRC_RQS			4
#define	HP663X2_DFI_SRC_OFF			5

#define	HP663X2_DIG_OUT_MAX			7
#define HP663X2_DIG_OUT_MIN			0

#define	HP663X2_PON_STATE_RST		0
#define	HP663X2_PON_STATE_RCL0		1

#define	HP663X2_SENSE_FUNC_VOLT		0
#define	HP663X2_SENSE_FUNC_CURR		1

#define	HP663X2_CURR_DET_ACDC		0
#define	HP663X2_CURR_DET_DC			1

#define	HP663X2_CURR_IMM            0
#define	HP663X2_CURR_TRIG           1

#define	HP663X2_CURR_Q              0
#define	HP663X2_CURR_Q_TRIG         1
#define	HP663X2_CURR_Q_MAX          2
#define	HP663X2_CURR_Q_MIN          3

#define	HP663X2_VOLT_IMM			0
#define	HP663X2_VOLT_TRIG			1
#define	HP663X2_VOLT_OVP			2
#define	HP663X2_VOLT_OVP_MAX		3
#define	HP663X2_VOLT_OVP_MIN		4

#define	HP663X2_VOLT_Q				0
#define	HP663X2_VOLT_Q_MAX          1
#define	HP663X2_VOLT_Q_MIN			2
#define	HP663X2_VOLT_Q_TRIG         3
#define	HP663X2_VOLT_Q_TRIG_MAX     4
#define	HP663X2_VOLT_Q_TRIG_MIN     5
#define	HP663X2_VOLT_Q_OVP			6
#define	HP663X2_VOLT_Q_OVP_MAX      7
#define	HP663X2_VOLT_Q_OVP_MIN      8

#define	HP663X2_ARM_OUTPUT_ONCE			0
#define	HP663X2_ARM_OUTPUT_CONTINUOUS	1
#define	HP663X2_ARM_ACQUISITION			3
#define	HP663X2_ARM_VOLT_ACQUISITION    4
#define	HP663X2_ARM_CURR_ACQUISITION    5

#define	HP663X2_TRIG_OUTPUT			0
#define	HP663X2_TRIG_ACQUISITION	1

#define	HP663X2_SET_VOLT			0
#define	HP663X2_SET_CURR			1

#define	HP663X2_OUTP_STATUS_OFF		0
#define	HP663X2_OUTP_STATUS_CV		1
#define	HP663X2_OUTP_STATUS_CC		2
#define	HP663X2_OUTP_STATUS_UNREG	3
#define	HP663X2_OUTP_STATUS_PROT	4
#define	HP663X2_OUTP_STATUS_UNKNOWN	5

#define	HP663X2_SENSE_WIND_RECT		0
#define	HP663X2_SENSE_WIND_HANN		1

#define	HP663X2_ACQ_COUNT_MIN		1
#define	HP663X2_ACQ_COUNT_MAX		100

    /***************************************************/
    /*  Instrument specific functions                  */
    /***************************************************/

    ViStatus _VI_FUNC hp663x2_rippleRiDfi (ViSession instrumentHandle);


    ViStatus _VI_FUNC hp663x2_readOutputStatus (ViSession instrumentHandle,
            ViPInt16 outputStatus);


    ViStatus _VI_FUNC hp663x2_outputVoltCurr(ViSession instrumentHandle,
            ViReal64 voltLev,
            ViReal64 currLev);


    ViStatus _VI_FUNC hp663x2_setMeasure (ViSession instrumentHandle,
                                          ViInt16	outputParam,
                                          ViReal64	outputLev,
                                          ViInt16	settlingTime,
                                          ViPReal64	voltQLev,
                                          ViPReal64 currQLev,
                                          ViPInt16	outputStatus);


    ViStatus _VI_FUNC hp663x2_setDisplay (ViSession instrumentHandle,
                                          ViBoolean dispState,
                                          ViInt16 dispMode,
                                          ViChar _VI_FAR messageText[]);


    ViStatus _VI_FUNC hp663x2_getDisplay (ViSession instrumentHandle,
                                          ViPBoolean dispState,
                                          ViPInt16 dispMode,
                                          ViChar _VI_FAR messageText[]);


    ViStatus _VI_FUNC hp663x2_measureVolt (ViSession instrumentHandle,
                                           ViInt16 measurement,
                                           ViPReal64 voltResult);


    ViStatus _VI_FUNC hp663x2_measureCurr (ViSession instrumentHandle,
                                           ViInt16 measurement,
                                           ViPReal64 currResult);


    ViStatus _VI_FUNC hp663x2_measureVoltArray (ViSession instrumentHandle,
            ViInt32 numReadings,
            ViReal64 _VI_FAR voltArray []);


    ViStatus _VI_FUNC hp663x2_measureCurrArray (ViSession instrumentHandle,
            ViInt32 numReadings,
            ViReal64 _VI_FAR currArray []);


    ViStatus _VI_FUNC hp663x2_fetchVolt (ViSession instrumentHandle,
                                         ViInt16 measurement,
                                         ViPReal64 voltResult);


    ViStatus _VI_FUNC hp663x2_fetchCurr (ViSession instrumentHandle,
                                         ViInt16 measurement,
                                         ViPReal64 currResult);


    ViStatus _VI_FUNC hp663x2_fetchVoltArray (ViSession instrumentHandle,
            ViInt32 numReadings,
            ViReal64 _VI_FAR voltArray []);


    ViStatus _VI_FUNC hp663x2_fetchCurrArray (ViSession instrumentHandle,
            ViInt32 numReadings,
            ViReal64 _VI_FAR currArray []);


    ViStatus _VI_FUNC hp663x2_setVoltAcqTrig (ViSession instrumentHandle,
            ViInt16 acqTrigSource,
            ViInt16 acqTrigVoltCount,
            ViInt16 acqTrigVoltSlope,
            ViReal64 acqTrigVoltLev,
            ViReal64 acqTrigVoltHyst);


    ViStatus _VI_FUNC hp663x2_getVoltAcqTrig (ViSession instrumentHandle,
            ViPInt16 acqTrigSource,
            ViPInt16 acqTrigVoltCount,
            ViPInt16 acqTrigVoltSlope,
            ViPReal64 acqTrigVoltLev,
            ViPReal64 acqTrigVoltHyst);


    ViStatus _VI_FUNC hp663x2_setCurrAcqTrig (ViSession instrumentHandle,
            ViInt16 acqTrigSource,
            ViInt16 acqTrigCurrCount,
            ViInt16 acqTrigCurrSlope,
            ViReal64 acqTrigCurrLev,
            ViReal64 acqTrigCurrHyst);


    ViStatus _VI_FUNC hp663x2_getCurrAcqTrig (ViSession instrumentHandle,
            ViPInt16 acqTrigSource,
            ViPInt16 acqTrigCurrCount,
            ViPInt16 acqTrigCurrSlope,
            ViPReal64 acqTrigCurrLev,
            ViPReal64 acqTrigCurrHyst);


    ViStatus _VI_FUNC hp663x2_setSweepParams (ViSession instrumentHandle,
            ViReal64 sampleInterval,
            ViInt32 sweepSize,
            ViInt32 sweepOffset);


    ViStatus _VI_FUNC hp663x2_getSweepParams (ViSession instrumentHandle,
            ViPReal64 sampleInterval,
            ViPInt32 sweepSize,
            ViPInt32 sweepOffset);


    ViStatus _VI_FUNC hp663x2_setMeasTimeout (ViSession instrumentHandle,
            ViInt32 measTimeout);


    ViStatus _VI_FUNC hp663x2_getMeasTimeout (ViSession instrumentHandle,
            ViPInt32 measTimeout);


    ViStatus _VI_FUNC hp663x2_clearOutpProt (ViSession instrumentHandle);


    ViStatus _VI_FUNC hp663x2_setOutpRelayPolarity (ViSession instrumentHandle,
            ViInt16 relayPolarity);


    ViStatus _VI_FUNC hp663x2_getOutpRelayPolarity (ViSession instrumentHandle,
            ViPInt16 relayPolarity);


    ViStatus _VI_FUNC hp663x2_setOutpState (ViSession instrumentHandle,
                                            ViBoolean outputState,
                                            ViBoolean switchRelay);


    ViStatus _VI_FUNC hp663x2_getOutpState (ViSession instrumentHandle,
                                            ViPBoolean outputState);


    ViStatus _VI_FUNC hp663x2_setPonState (ViSession instrumentHandle,
                                           ViInt16 ponState);


    ViStatus _VI_FUNC hp663x2_getPonState (ViSession instrumentHandle,
                                           ViPInt16 ponState);


    ViStatus _VI_FUNC hp663x2_setOutpRelay (ViSession instrumentHandle,
                                            ViBoolean relayState);


    ViStatus _VI_FUNC hp663x2_getOutpRelay (ViSession instrumentHandle,
                                            ViPBoolean relayState);


    ViStatus _VI_FUNC hp663x2_setRiDfi (ViSession instrumentHandle,
                                        ViInt16 riMode,
                                        ViBoolean dfiState,
                                        ViInt16 dfiSourceBit);


    ViStatus _VI_FUNC hp663x2_getRiDfi (ViSession instrumentHandle,
                                        ViPInt16 riMode,
                                        ViPBoolean dfiState,
                                        ViPInt16 dfiSourceBit);


    ViStatus _VI_FUNC hp663x2_setOutpTrigSource (ViSession instrumentHandle,
            ViInt16 outpTrigSource);


    ViStatus _VI_FUNC hp663x2_getOutpTrigSource (ViSession instrumentHandle,
            ViPInt16 outpTrigSource);


    ViStatus _VI_FUNC hp663x2_getAcqSenseFunc (ViSession instrumentHandle,
            ViPInt16 senseFunction);


    ViStatus _VI_FUNC hp663x2_setCurrSenseParams (ViSession instrumentHandle,
            ViReal64 currSenseRange,
            ViInt16 currSenseDetector);


    ViStatus _VI_FUNC hp663x2_getCurrSenseParams (ViSession instrumentHandle,
            ViPReal64 currSenseRange,
            ViPInt16 currSenseDetector);


    ViStatus _VI_FUNC hp663x2_setWindowType (ViSession instrumentHandle,
            ViInt16 windowType);


    ViStatus _VI_FUNC hp663x2_getWindowType (ViSession instrumentHandle,
            ViPInt16 windowType);


    ViStatus _VI_FUNC hp663x2_setCurr (ViSession instrumentHandle,
                                       ViInt16 currParam,
                                       ViReal64 currLev);


    ViStatus _VI_FUNC hp663x2_getCurr (ViSession instrumentHandle,
                                       ViInt16 currQParam,
                                       ViPReal64 currLev);


    ViStatus _VI_FUNC hp663x2_setVolt (ViSession instrumentHandle,
                                       ViInt16 voltParam,
                                       ViReal64 voltLev);


    ViStatus _VI_FUNC hp663x2_getVolt (ViSession instrumentHandle,
                                       ViInt16 voltQParam,
                                       ViPReal64 voltLev);



    ViStatus _VI_FUNC hp663x2_setOcpParams (ViSession instrumentHandle,
                                            ViBoolean ocpEnable,
                                            ViReal64 ccDelay);


    ViStatus _VI_FUNC hp663x2_getOcpParams (ViSession instrumentHandle,
                                            ViPBoolean ocpEnable,
                                            ViPReal64 ccDelay);


    ViStatus _VI_FUNC hp663x2_setDigio (ViSession instrumentHandle, ViInt16 digOutData);


    ViStatus _VI_FUNC hp663x2_getDigio (ViSession instrumentHandle,
                                        ViPInt16 digInData);


    ViStatus _VI_FUNC hp663x2_getVoltAlcBandwidth (ViSession instrumentHandle,
            ViPInt32 alcBandwidth);


    ViStatus _VI_FUNC hp663x2_arm (ViSession instrumentHandle, ViInt16 trigSystem);


    ViStatus _VI_FUNC hp663x2_trigger (ViSession instrumentHandle, ViInt16 subSystem);