VXIPNP/WinNT/HP663X2/hp663x2.bas


Global Const HP663X2_RI_OFF = 0
Global Const HP663X2_RI_LATCHING = 1
Global Const HP663X2_RI_LIVE = 2

Global Const HP663X2_DFI_SRC_PREV = 0
Global Const HP663X2_DFI_SRC_QUES = 1
Global Const HP663X2_DFI_SRC_OPER = 2
Global Const HP663X2_DFI_SRC_ESB = 3
Global Const HP663X2_DFI_SRC_RQS = 4
Global Const HP663X2_DFI_SRC_OFF = 5

Global Const HP663X2_DIG_OUT_MAX = 7
Global Const HP663X2_DIG_OUT_MIN = 0

Global Const HP663X2_PON_STATE_RST = 0
Global Const HP663X2_PON_STATE_RCL0 = 1

Global Const HP663X2_SENSE_FUNC_VOLT = 0
Global Const HP663X2_SENSE_FUNC_CURR = 1

Global Const HP663X2_CURR_DET_ACDC = 0
Global Const HP663X2_CURR_DET_DC = 1

Global Const HP663X2_CURR_IMM = 0
Global Const HP663X2_CURR_TRIG = 1

Global Const HP663X2_CURR_Q = 0
Global Const HP663X2_CURR_Q_TRIG = 1
Global Const HP663X2_CURR_Q_MAX = 2
Global Const HP663X2_CURR_Q_MIN = 3

Global Const HP663X2_VOLT_IMM = 0
Global Const HP663X2_VOLT_TRIG = 1
Global Const HP663X2_VOLT_OVP = 2
Global Const HP663X2_VOLT_OVP_MAX = 3
Global Const HP663X2_VOLT_OVP_MIN = 4

Global Const HP663X2_VOLT_Q = 0
Global Const HP663X2_VOLT_Q_MAX = 1
Global Const HP663X2_VOLT_Q_MIN = 2
Global Const HP663X2_VOLT_Q_TRIG = 3
Global Const HP663X2_VOLT_Q_TRIG_MAX = 4
Global Const HP663X2_VOLT_Q_TRIG_MIN = 5
Global Const HP663X2_VOLT_Q_OVP = 6
Global Const HP663X2_VOLT_Q_OVP_MAX = 7
Global Const HP663X2_VOLT_Q_OVP_MIN = 8

Global Const HP663X2_ARM_OUTPUT_ONCE = 0
Global Const HP663X2_ARM_OUTPUT_CONTINUOUS = 1
Global Const HP663X2_ARM_ACQUISITION = 2
Global Const HP663X2_ARM_VOLT_ACQUISITION = 3
Global Const HP663X2_ARM_CURR_ACQUISITION = 4

Global Const HP663X2_TRIG_OUTPUT = 0
Global Const HP663X2_TRIG_ACQUISITION = 1

Global Const HP663X2_SET_VOLT = 0
Global Const HP663X2_SET_CURR = 1

Global Const HP663X2_OUTP_STATUS_OFF = 0
Global Const HP663X2_OUTP_STATUS_CV = 1
Global Const HP663X2_OUTP_STATUS_CC = 2
Global Const HP663X2_OUTP_STATUS_UNREG = 3
Global Const HP663X2_OUTP_STATUS_PROT = 4
Global Const HP663X2_OUTP_STATUS_UNKNOWN = 5

Global Const HP663X2_VOLT_TRIG_MIN = 0
Global Const HP663X2_VOLT_MIN = 0
Global Const HP663X2_CURR_TRIG_MIN = 0
Global Const HP663X2_CURR_MIN = 0

Global Const HP663X2_SENSE_WIND_RECT = 0
Global Const HP663X2_SENSE_WIND_HANN = 1

Global Const HP663X2_ACQ_COUNT_MIN = 1
Global Const HP663X2_ACQ_COUNT_MAX = 100

'        ***************************************************
'        *  Instrument specific functions                  *
'        ***************************************************
Declare Function hp663x2_outputVoltCurr Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal voltLev As Double, _
     ByVal currLev As Double) As Long

Declare Function hp663x2_readOutputStatus Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           outputStatus As Integer) As Long

Declare Function hp663x2_rippleRiDfi Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long) As Long

Declare Function hp663x2_setMeasure Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal outputParam As Integer, _
     ByVal outputLev As Double, _
     ByVal settlingTime As Integer, _
           voltQlev As Double, _
           currQlev As Double, _
           outputStatus As Integer) As Long

Declare Function hp663x2_setDisplay Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal dispState As Integer, _
     ByVal dispMode As Integer, _
     ByVal messageText As String) As Long

Declare Function hp663x2_getDisplay Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           dispState As Integer, _
           dispMode As Integer, _
     ByVal messageText As String) As Long

Declare Function hp663x2_measureVolt Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal measurement As Integer, _
           measResult As Double) As Long

Declare Function hp663x2_measureCurr Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal measurement As Integer, _
           measResult As Double) As Long

Declare Function hp663x2_measureVoltArray Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal numReadings As Integer, _
           waveformArray As Double) As Long

Declare Function hp663x2_measureCurrArray Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal numReadings As Integer, _
           waveformArray As Double) As Long

Declare Function hp663x2_fetchVolt Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal measurement As Integer, _
           fetchResult As Double) As Long

Declare Function hp663x2_fetchCurr Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal measurement As Integer, _
           fetchResult As Double) As Long

Declare Function hp663x2_fetchVoltArray Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal numReadings As Integer, _
           waveformArray As Double) As Long

Declare Function hp663x2_fetchCurrArray Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal numReadings As Integer, _
           waveformArray As Double) As Long

Declare Function hp663x2_setVoltAcqTrig Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal acqTrigSource As Integer, _
     ByVal acqTrigVoltCount As Integer, _
     ByVal acqTrigVoltSlope As Integer, _
     ByVal acqTrigVoltLev As Double, _
     ByVal acqTrigVoltHyst As Double) As Long

Declare Function hp663x2_getVoltAcqTrig Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           acqTrigSource As Integer, _
           acqTrigVoltCount As Integer, _
           acqTrigVoltSlope As Integer, _
           acqTrigVoltLev As Double, _
           acqTrigVoltHyst As Double) As Long

Declare Function hp663x2_setCurrAcqTrig Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal acqTrigSource As Integer, _
     ByVal acqTrigCurrCount As Integer, _
     ByVal acqTrigCurrSlope As Integer, _
     ByVal acqTrigCurrLev As Double, _
     ByVal acqTrigCurrHyst As Double) As Long

Declare Function hp663x2_getCurrAcqTrig Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           acqTrigSource As Integer, _
           acqTrigCurrCount As Integer, _
           acqTrigCurrSlope As Integer, _
           acqTrigCurrLev As Double, _
           acqTrigCurrHyst As Double) As Long

Declare Function hp663x2_setSweepParams Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal sampleInterval As Double, _
     ByVal sweepSize As Long, _
     ByVal sweepOffset As Long) As Long

Declare Function hp663x2_getSweepParams Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           sampleInterval As Double, _
           sweepSize As Long, _
           sweepOffset As Long) As Long

Declare Function hp663x2_setMeasTimeout Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal milliSeconds As Long) As Long

Declare Function hp663x2_getMeasTimeout Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           milliSeconds As Long) As Long

Declare Function hp663x2_clearOutpProt Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long) As Long

Declare Function hp663x2_setOutpRelayPolarity Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal relayPolarity As Integer) As Long

Declare Function hp663x2_getOutpRelayPolarity Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           relayPolarity As Integer) As Long

Declare Function hp663x2_setOutpState Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal outputState As Integer, _
     ByVal switchRelay As Integer) As Long

Declare Function hp663x2_getOutpState Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           outputState As Integer) As Long

Declare Function hp663x2_setPonState Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal ponState As Integer) As Long

Declare Function hp663x2_getPonState Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           ponState As Integer) As Long

Declare Function hp663x2_setOutpRelay Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal relayState As Integer) As Long

Declare Function hp663x2_getOutpRelay Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           relayState As Integer) As Long

Declare Function hp663x2_setRiDfi Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal riMode As Integer, _
     ByVal dfiState As Integer, _
     ByVal dfiSourceBit As Integer) As Long

Declare Function hp663x2_getRiDfi Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           riMode As Integer, _
           dfiState As Integer, _
           dfiSourceBit As Integer) As Long

Declare Function hp663x2_setOutpTrigSource Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal outpTrigSource As Integer) As Long

Declare Function hp663x2_getOutpTrigSource Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           outpTrigSource As Integer) As Long

Declare Function hp663x2_getAcqSenseFunc Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           senseFunction As Integer) As Long

Declare Function hp663x2_setCurrSenseParams Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal currSenseRange As Double, _
     ByVal currSenseDetector As Integer) As Long

Declare Function hp663x2_getCurrSenseParams Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           currSenseRange As Double, _
           currSenseDetector As Integer) As Long

Declare Function hp663x2_setWindowType Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal windowType As Integer) As Long

Declare Function hp663x2_getWindowType Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           windowType As Integer) As Long

Declare Function hp663x2_setCurr Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal currQParam As Integer, _
     ByVal currLev As Double) As Long

Declare Function hp663x2_getCurr Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal currQParam As Integer, _
           currLev As Double) As Long

Declare Function hp663x2_setVolt Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal voltQParam As Integer, _
     ByVal voltLev As Double) As Long

Declare Function hp663x2_getVolt Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal voltQParam As Integer, _
           voltLev As Double) As Long

Declare Function hp663x2_setOcpParams Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal ocpEnable As Integer, _
     ByVal ccDelay As Double) As Long

Declare Function hp663x2_getOcpParams Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           ocpEnable As Integer, _
           ccDelay As Double) As Long

Declare Function hp663x2_setDigio Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal digInData As Integer) As Long

Declare Function hp663x2_getDigio Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           digInData As Integer) As Long

Declare Function hp663x2_getVoltAlcBandwidth Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
           alcBandwidth As Double) As Long

Declare Function hp663x2_arm Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal trigSystem As Integer) As Long

Declare Function hp663x2_trigger Lib "hp663x2_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal subSystem As Integer) As Long
